--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.6.7",
-    "tslib": "2.3.1",
-    "zone.js": "0.11.4",
+    "@angular/animations": "12.1.5",
+    "@angular/common": "12.1.5",
+    "@angular/compiler": "12.1.5",
     "@angular/core": "12.1.5",
     "@angular/forms": "12.1.5",
-    "@angular/common": "12.1.5",
-    "@angular/router": "12.1.5",
-    "@angular/compiler": "12.1.5",
-    "@angular/animations": "12.1.5",
     "@angular/platform-browser": "12.1.5",
+    "@angular/platform-browser-dynamic": "12.1.5",
+    "@angular/router": "12.1.5",
+    "@popperjs/core": "^2.10.1",
     "angular-in-memory-web-api": "0.11.0",
-    "@angular/platform-browser-dynamic": "12.1.5"
+    "bootstrap": "^5.1.1",
+    "jquery": ">=1.8.0",
+    "ngx-slick-carousel": "^0.5.1",
+    "rxjs": "6.6.7",
+    "slick-carousel": "^1.8.1",
+    "tslib": "2.3.1",
+    "zone.js": "0.11.4"
   },
   "scripts": {
     "ng": "ng",
